cabal-version: 2.2

name: recto
version: 0.1.0.0

flag plugin
  default: True
  manual: True

library
  hs-source-dirs: src
  build-depends: base
  if flag(plugin)
    build-depends: ghc == 9.2.8, syb
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints
  exposed-modules:
    Recto
    Recto.Internal
    Recto.Internal.Instances
    Recto.Internal.Plugin
    Recto.Plugin
