cabal-version: 2.2

name:        recto
version:     0.1.0.0
synopsis:    Toy anonymous records
description: Toy anonymous records
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/recto
license:     ISC
copyright:   2023 Evan Relf

library
  hs-source-dirs: src
  build-depends: base
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints
  exposed-modules:
    Recto
    Recto.Internal
    Recto.Internal.Instances
